# claude-tools

./: .gitignore  Makefile  README.md  hello-world.sh  phased-implementation-streaming.sh  phased-implementation.py  phased-implementation.sh  repos.json  sync-commands.sh  test-output.txt  voice-plan.sh  voice-to-claude.sh
.claude-plugin/: marketplace.json
cli/: Package.swift  README.md  run.sh
cli/Sources/DevPilot/: DevPilot.swift
cli/Tests/DevPilotTests/: DevPilotTests.swift
commands/: next-task.md  plan-bill.md  planning.md  review-bill.md  review.md
dev-pilot/: Package.swift  README.md  run.sh
dev-pilot/Tests/DevPilotTests/: DevPilotTests.swift
dev-pilot/docs/completed/: 2026-02-10-a-live-status-line.md  2026-02-10-b-generic-claude-path-resolution.md
dev-pilot/docs/proposed/: 2026-02-10-a-live-status-line.md  2026-02-10-a-refactor-claude-service-indentation.md  2026-02-10-b-generic-claude-path-resolution.md
docs/: apple-shortcut-setup.md
docs/proposed/: test-plan.md  test-simple-feature.md  voice-driven-development-pipeline.md
plugin/.claude-plugin/: plugin.json
plugin/skills/gestrich-claude-tools-next-task/: SKILL.md
plugin/skills/gestrich-claude-tools-plan/: SKILL.md
voice/: .gitignore  README.md  clear-input.sh  debug-send-verbose.sh  debug-send.sh  pyproject.toml  start.sh  test-input.sh  view-logs.sh
voice/src/voice/: __init__.py  __main__.py
voice/src/voice/application/: __init__.py  claude_parser.py  command_executor.py  file_watcher.py
voice/src/voice/domain/: models.py
voice/tests/: __init__.py
(+22 files in other folders)
